<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@color/base03">

    <!-- Login progress -->
    <ImageView
        android:layout_width="271dp"
        android:layout_height="212dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:background="@color/base03" />

    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="333dp"
        android:background="@color/base03">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/base0"
                android:textColor="@color/cyan">

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/cyan" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/base0">

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    android:textColor="@color/cyan" />

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="REGISTER"
                android:id="@+id/Register"
                android:layout_gravity="center_horizontal"
                style="?android:textAppearanceSmall"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:onClick="openRegister" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
