<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.joshua.livetogether.RegisterUser"
    android:background="@color/base03">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress1" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form1" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form1" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/base0"
                android:transitionGroup="false">


            <AutoCompleteTextView android:id="@+id/email1" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true"
                android:textColor="@color/cyan" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/base0">


                <EditText android:id="@+id/password1" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    android:textColor="@color/cyan" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/base0">


            <EditText android:id="@+id/number" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_number"
                    android:inputType="number"
                    android:imeActionId="@+id/password1"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:singleLine="true"
                android:textColor="@color/cyan" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Continue"
                android:id="@+id/Register1"
                android:layout_gravity="center_horizontal"
                style="?android:textAppearanceSmall"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:onClick="attemptRegister" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:id="@+id/back_to_login"
                android:layout_gravity="center_horizontal"
                style="?android:textAppearanceSmall"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:onClick="cancelRegister" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
