...
    <string name="app_name">Broom Mates</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_number">Cell Phone #</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_taken_email">This username already has an account</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_unsuccessful_login">Username or Password is incorrect</string>
    <string name="error_field_required">This field is required</string>
...
